Basic site with chart in monorepo

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ TINYBIRD_TOKEN=""
 # API endpoint token
 TINYBIRD_TOKEN_DASHBOARD=""
 NODE_ENV=development
+# domin name for deployed site via SST
+# SITE_HOSTNAME=""
