--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -15,9 +15,11 @@
     "@tabler/icons-react": "^3.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "humanize-duration": "^3.32.1",
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
     "picocolors": "^1.0.1",
+    "pluralize": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
@@ -27,7 +29,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/humanize-duration": "^3.27.4",
     "@types/node": "^20.14.10",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.57.0",
