Reload stale data on page load

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ TINYBIRD_TOKEN=""
 # TINYBIRD_BASE_URL="https://api.us-east.aws.tinybird.co"
 # API endpoint token
 TINYBIRD_TOKEN_DASHBOARD=""
-NODE_ENV=development
 # domin name for deployed site via SST
 # SITE_HOSTNAME=""
+NEXT_PUBLIC_DATA_STALE_TIME=900
+NEXT_PUBLIC_DEBUG=false
