--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@chronark/zod-bird": "^0.3.9",
     "@tabler/icons-react": "^3.10.0",
+    "boolean": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "humanize-duration": "^3.32.1",
-    "lucide-react": "^0.407.0",
+    "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "picocolors": "^1.0.1",
     "pluralize": "^8.0.0",
