--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "humanize-duration": "^3.32.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "picocolors": "^1.0.1",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/humanize-duration": "^3.27.4",
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.10",
     "@types/pluralize": "^0.0.33",
     "@types/react": "^18.3.3",
