--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "check": "tsc --noEmit",
     "start": "next start",
-    "deploy:prod": "NODE_ENV=production sst deploy --stage production"
+    "deploy:prod": "NODE_ENV=production sst deploy --stage production",
+    "deploy:preview": "NODE_ENV=preview sst deploy --stage preview"
   },
   "dependencies": {
     "@chronark/zod-bird": "^0.3.9",
@@ -25,7 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
-    "sst": "ion",
+    "sst": "^3.0.37",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
