Load secrets from Resource with Linkable

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ TINYBIRD_TOKEN=""
 TINYBIRD_TOKEN_DASHBOARD=""
 # domin name for deployed site via SST
 # SITE_HOSTNAME=""
+# USER_EMAIL=""
 NEXT_PUBLIC_DATA_STALE_TIME=900
 NEXT_PUBLIC_DEBUG=false
+# For SST deploys, reuse a cache policy (AWS has a limit of 20 per account): https://ion.sst.dev/docs/component/aws/nextjs/#cachepolicy
+# CACHE_POLICY=""
