--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -9,7 +9,7 @@
     "check": "tsc --noEmit",
     "start": "next start",
     "deploy:prod": "NODE_ENV=production sst deploy --stage production",
-    "deploy:preview": "NODE_ENV=preview sst deploy --stage preview"
+    "deploy:preview": "NODE_ENV=production sst deploy --stage preview"
   },
   "dependencies": {
     "@chronark/zod-bird": "^0.3.9",
@@ -19,14 +19,14 @@
     "clsx": "^2.1.1",
     "humanize-duration": "^3.32.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.408.0",
+    "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "picocolors": "^1.0.1",
     "pluralize": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
-    "sst": "^3.0.37",
+    "sst": "^0.1.28",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -34,14 +34,14 @@
   "devDependencies": {
     "@types/humanize-duration": "^3.27.4",
     "@types/lodash": "^4.17.7",
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.14.12",
     "@types/pluralize": "^0.0.33",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4"
   }
 }
